refactor:重构了项目结构

--- a/src/pages/Login/style.scss
+++ b/src/pages/Login/style.scss
@@ -1,12 +1,11 @@
 .login-form {
   max-width: 300px;
   margin: 60px auto;
-}
-
-.login-form h2 {
-  margin: 36px 0;
-  text-align: center;
-  font-weight: 200;
+  h2 {
+    margin: 36px 0;
+    text-align: center;
+    font-weight: 200;
+  }
 }
 
 .login-form-forgot {
